Revision history for {{$dist->name}}

{{$NEXT}}
    - line numbers in shipped code are now almost the same (within 3) as the
      repository source, for easier debugging
    - Changes content once again included manually, rather than extracted
      directly from git! (there are release tests to ensure that the file is
      kept current.)

1.32   2013-11-07 15:56:33 +0000
    - include dep Test::Requires in dist.ini (wolfsage)

1.31   2013-11-06 21:46:52 +0000
    - test string escapes with JSON::PP (ilmari)
    - support added for JSON::XS version 3 (ilmari)
    - documentation notes added regarding incompatibility issues with
      JSON::XS 3.x and JSON.pm < 2.90
    - tests for more backends
    - fix the tests to properly exclude JSON::XS unless we are explicitly
      testing it

1.30    2013-06-15
    * Add support for Cpanel::JSON::XS and JSON::PP. Fixes RT#85424 & RT#67967. (perigrin)
    * Fix documentation bug RT#86065.

1.29    2011-06-07
	* Artificially bump our version number because an upstream author decided to not play nice. Fixes RT#68690 (perigrin)

1.28	2011-05-09
	* Move podspell into xt/ (perigrin)

1.27    2011-04-08
        * Add auto_install so feature works again, fixes RT#67169 (perigrin)

1.26    2011-03-30
        * Add Deprecation notice (perigrin)

1.25    2010-11-16
        * Fix the test suite to be 5.14 compatible (toddr)

1.24	2010-10-08
	    * Fix the Build from where MI changed underneath me (perigrin)

1.23    2010-10-07
        * support JSON v1.15 as well as 2.x (arcanez)

1.22	2009-10-12
        * Update JSON::XS tests to deal with inconsistent white space
          generation between releases (t0m)

1.21    2009-07-03
        * Update JSON::XS boolean support; it provides true/false methods (semifor)
        * Added a workaround for handlers that fail to decode bare true/false values (semifor)

1.20    2009-07-02
        * Re-work things so that deprecated modules just warn but aren't actually excluded (perigrin)